Fix url links section and starting the performance section